<resources>
    <string name="app_name">Time To Learn</string>
    <string name="logo">Logo Time to Learn</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string-array name="options">
        <item>Linear Layout Kick</item>
        <item>Realtive Layout Punch</item>
        <item>Card View Sidekick</item>
    </string-array>
</resources>
